Creacion de Formacion academica y correcciones 2

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <body>
     <header class="cabecera">
         <div class="logo">
-            <img src="/Images/portafolio.png" alt="Estrella">
+            <img src="./Images/portafolio.png" alt="Estrella">
             <h1 class="nombre">Jhon Fredy Gutierrez Carvajal</h1>
         </div>
         <nav class="navegacion">
@@ -65,14 +65,14 @@
     </header>
     <main>
         <section class="perfil">
-            <img class="perfil__foto" src="/Images/foto.png" alt="Foto">
+            <img class="perfil__foto" src="./Images/foto.png" alt="Foto">
             <div class="perfil__container">
                 <h1 class="perfil__titulo">Hola, mi nombre es Jhon Fredy Gutierrez y soy desarrollador Front-end</h1>
                 <h3 class="perfil__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates vel, voluptas sint maxime consequatur aperiam similique animi, in quae, harum cum saepe cumque mollitia illum inventore repudiandae rerum expedita tempore.</h3>
                 <ul class="perfil__redes">
-                    <li class="perfil__redes_item"><a href="#">Github <img src="/Images/github (1).png" alt="Github"></a></li>
-                    <li class="perfil__redes_item"><a href="#">LinkedIn <img src="/Images/linkedin.png" alt="Linkedin" ></a></li>
-                    <li class="perfil__redes_item"><a href="./Images/HV Jhon G.pdf" target="_blank">Currículo <img src="/Images/curriculos.png" alt="Curriculo"></a></li>
+                    <li class="perfil__redes_item"><a href="#">Github <img src="./Images/github (1).png" alt="Github"></a></li>
+                    <li class="perfil__redes_item"><a href="#">LinkedIn <img src="./Images/linkedin.png" alt="Linkedin" ></a></li>
+                    <li class="perfil__redes_item"><a href="./Images/HV Jhon G.pdf" target="_blank">Currículo <img src="./Images/curriculos.png" alt="Curriculo"></a></li>
                 </ul>
             </div>
             
