Creacion de seccion proyectos

--- a/index.html
+++ b/index.html
@@ -6,12 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./CSS/reset.css">
     <link rel="stylesheet" href="./CSS/styles.css">
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Roboto+Condensed:wght@300;400;700&display=swap" rel="stylesheet"> -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -45,6 +39,8 @@
     <link rel="stylesheet" href="./CSS/Experiencia/experiencia-items.css">
     <link rel="stylesheet" href="./CSS/Experiencia/experiencia-titulo.css">
     <link rel="stylesheet" href="./CSS/Experiencia/experiencia.css">
+    <link rel="stylesheet" href="./CSS/Experiencia/experiencia-caja.css">
+    <link rel="stylesheet" href="./CSS/Experiencia/experiencia-imagen.css">
 </head>
 <body>
     <header class="cabecera">
@@ -184,9 +180,42 @@
         <section class="experiencia">
             <h1 class="experiencia_titulo">Experiencia profesional</h1>
             <div class="experiencias_container">
-                
+                <div class="experiencia-caja">
+                    <div class="experiencia-img"><img src="./Images/encriptador.png" alt="Encriptador"></div>
+                    <div class="experiencia-items">
+                        <h1 class="experiencia-caja-titulo">Encriptador De texto</h1>
+                        <p class="experiencia-descripcion">Challenge - Alura Oracle ONE</p>
+                        <div class="experiencia-botones">
+                            <a href="https://github.com/jhonf1992/encriptador" type="button" class="button1" target="_blank">Repositorio</a>
+                            <a href="https://jhonf1992.github.io/encriptador/" type="button" class="button2" target="_blank">Ver Demo</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="experiencia-caja">
+                    <div class="experiencia-items">
+                        <h1 class="experiencia-caja-titulo">Pagina Ferretería Carvajal</h1>
+                        <p class="experiencia-descripcion">Proyecto - SENA</p>
+                        <div class="experiencia-botones">
+                            <a href="https://github.com/jhonf1992/proyectoSena" type="button" class="button1" target="_blank">Repositorio</a>
+                            <a href="https://jhonf1992.github.io/proyectoSena/" type="button" class="button2" target="_blank">Ver Demo</a>
+                        </div>
+                    </div>
+                    <div class="experiencia-img"><img src="./Images/carvaja-pagina.png" alt="Pagina Carvajal"></div>
+                </div>
+                <div class="experiencia-caja">
+                    <div class="experiencia-img"><img src="./Images/pagina-postobon.png" alt="Pagina Postobón"></div>
+                    <div class="experiencia-items">
+                        <h1 class="experiencia-caja-titulo">Pagina Web Postobón</h1>
+                        <p class="experiencia-descripcion">Proyecto - SENA</p>
+                        <div class="experiencia-botones">
+                            <a href="https://github.com/jhonf1992/PaginaPostobon" type="button" class="button1" target="_blank">Repositorio</a>
+                            <a href="https://jhonf1992.github.io/PaginaPostobon/" type="button" class="button2" target="_blank">Ver Demo</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
+        
     </main>
     <footer>
 
