Creacion de formulario

--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
     <link rel="stylesheet" href="./CSS/Experiencia/experiencia.css">
     <link rel="stylesheet" href="./CSS/Experiencia/experiencia-caja.css">
     <link rel="stylesheet" href="./CSS/Experiencia/experiencia-imagen.css">
+    <link rel="stylesheet" href="./CSS/Footer/Contacto-imagen.css">
+    <link rel="stylesheet" href="./CSS/Footer/Contacto.css">
+    <link rel="stylesheet" href="./CSS/Footer/Copyright.css">
+    <link rel="stylesheet" href="./CSS/Footer/Formulario.css">
+    <link rel="stylesheet" href="./CSS/Footer/Pie.css">
 </head>
 <body>
     <header class="cabecera">
@@ -217,9 +222,24 @@
         </section>
         
     </main>
-    <footer>
+    <footer class="pie-pagina">
         <section class="contacto">
-
+            <div class="contacto-imagen">
+                <img src="./Images/contacto2.png" alt="">
+            </div>
+            <div class="contacto-form">
+                <h1 class="contacto-titulo">Contacto</h1>
+                <p class="contacto-descripcion">¿Quieres contactarme? <br><br> completa el siguiente formulario y me pondré en contacto contigo.</p>
+                <form class="formulario">
+                    <fieldset class="formulario-lista">
+                        <input class="input" type="text" placeholder="Nombre">
+                        <input class="input" type="email" placeholder="E-mail">
+                        <input class="input" type="text" placeholder="Asunto">
+                        <textarea class="textarea" cols="30" rows="10" placeholder="Mensaje" ></textarea>
+                        <a href="" class="boton">Enviar mensaje</a>
+                    </fieldset>
+                </form>
+            </div>
         </section>
         <section class="copyringht">
 
