--- a/index.html
+++ b/index.html
@@ -232,9 +232,9 @@
                 <p class="contacto-descripcion">¿Quieres contactarme? <br><br> completa el siguiente formulario y me pondré en contacto contigo.</p>
                 <form class="formulario">
                     <fieldset class="formulario-lista">
-                        <input class="input" type="text" placeholder="Nombre">
-                        <input class="input" type="email" placeholder="E-mail">
-                        <input class="input" type="text" placeholder="Asunto">
+                        <input class="input" type="text" placeholder="Nombre" required>
+                        <input class="input" type="email" placeholder="E-mail" required>
+                        <input class="input" type="text" placeholder="Asunto" required>
                         <textarea class="textarea" cols="30" rows="10" placeholder="Mensaje" ></textarea>
                         <a href="" class="boton">Enviar mensaje</a>
                     </fieldset>
@@ -242,7 +242,8 @@
             </div>
         </section>
         <section class="copyringht">
-
+            <h2><small>Desarrollado por Jhon F. Gutierrez C. <br>
+            2023 Alura Latam</small></h2>
         </section>
     </footer>
 </body>
